fixed style modal overflow

--- a/lista-de-presentes/css/index.scss
+++ b/lista-de-presentes/css/index.scss
@@ -114,7 +114,7 @@ html, body {
     height: 100vh;
     width: 100%;
     background-color: rgba(0,0,0,.5);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     &__content {
